share endpoint
