# api.yaml
@@ -229,6 +229,18 @@ paths:
         '201':
           description: |-
             201 response
+    get:
+      operationId: getSharesV1
+      summary: get shares
+      responses:
+        '200':
+          description: a list of shares
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Share'
   /share/{uuid}:
     get:
       operationId: getShareV1
@@ -578,6 +590,8 @@ components:
           format: date-time
         text:
           type: string
+        selfLiked:
+          type: boolean
         user:
           $ref: "#/components/schemas/User"
         post:
